--- a/Portfolio/style/style.scss
+++ b/Portfolio/style/style.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@100;200;300;400;500;600;700&display=swap');
+
 $base-font-family: 'Epilogue';
 $base-font-weight: 600;
 $background-color: #fff;
@@ -10,8 +12,18 @@ $background-color: #fff;
 * {
     box-sizing: border-box;
   }
+  @mixin tab{
+    @media (min-width: 566px) and (max-width: 800px){
+      @content;
+    }
+  }
   @mixin phone{
-    @media only screen and (max-width: 700px){
+    @media only screen and (max-width: 565px){
+      @content;
+    }
+  }
+  @mixin laptop{
+    @media (min-width: 800px) and (max-width: 1095px){
       @content;
     }
   }
@@ -27,7 +39,8 @@ nav {
   height: 80px;
   padding: 25px 50px;
   align-items: flex-start;
-  gap: 870px;
+  justify-content:space-between;
+  
 
   .nav-logo {
     @extend %common-styles;
@@ -41,12 +54,6 @@ nav {
       @extend %common-styles;
       font-size: 20px;
       line-height: 30px;
-    }
-    @include phone {
-      &::before {
-        content: url('../assets/hero/Menu.svg');
-        margin-right: 10px; 
-      }
     }
   }
 
@@ -64,27 +71,60 @@ nav {
     .contact {
       font-size: 17px;
       line-height: 28px;
-      @include phone {
+      .nav__link{
+        text-decoration: none;
+        color:black;
+      }
+      .nav__link:hover {
+        color: #007bff; 
+      }
+     
+      .nav__link:active {
+        color: #007bff; 
+      }
+      @include tab{
+      display: none;
+      }
+      @include phone{
         display: none;
+        }
+    }
+    .svg-icon{
+      display: none;
+      @include tab{
+        display: inline;
+        width: 25px; 
+        height: 23px; 
+        background: url('../assets/hero/Menu.svg') no-repeat center center; 
+      }
+      @include phone{
+        display: inline;
+        width: 25px; 
+        height: 23px; 
+        background: url('../assets/hero/Menu.svg') no-repeat center center; 
       }
     }
-   
-  }
-  
+    @include tab{
+      justify-content: right;
+    }
+    @include phone{
+      justify-content: right;
+    }
+  } 
 }
 
 /* Header */
 header {
   @include center;
-  padding: 100px;
+  padding: inherit;
   flex-direction: column;
   align-items: center;
-  gap: 10px;
+  gap: inherit;
 
   .header-content {
     @extend %common-styles;
     display: flex;
-    width: 1080px;
+    width: 100%;
     align-items: center;
     gap: 28px;
 
@@ -94,6 +134,7 @@ header {
       flex-direction: column;
       align-items: flex-start;
       gap: 40px;
+      width: 100%;;
 
       .headline {
         @extend %common-styles;
@@ -101,17 +142,21 @@ header {
         flex-direction: column;
         align-items: flex-start;
         gap: 40px;
+        width: 100%;
 
         .brand {
-          width: 557px;
           font-size: 20px;
           line-height: 30px;
+          
         }
 
         .portfolio-title {
-          width: 557px;
+          
           font-size: 80px;
           line-height: 90px;
+          @include phone{
+            font-size: 50px;
+          }
         }
       }
 
@@ -119,14 +164,55 @@ header {
         font-size: 17px;
         line-height: 27px;
       }
+      @include phone{
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 20px;}
     }
 
     .hero-image {
-      width: 495px;
-      height: 424px;
+      // width: 495px;
+      // height: 424px;
       flex-shrink: 0;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+      @include phone{
+        width:100%;
+      }
     }
   } 
+  @include tab {
+    .header-content{
+      display:flex;
+      width: 100%;
+      flex-wrap: wrap;
+      gap:inherit;
+      justify-content: center;
+    }
+  }
+  @include phone{
+    .header-content{
+      flex-wrap: wrap;
+      width: 100%; 
+    }
+  }
+  @include laptop{
+    .header-content{
+      flex-wrap: wrap;
+      width: 100%; 
+      gap:0;
+    }
+  }
+}
+@include phone{
+  header{
+    gap: 10px;
+    width:100%;
+  }
 }
 
 /* Logo Section */
@@ -155,15 +241,27 @@ header {
       }
     }
   }
+  @include tab{
+    .logos{
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      gap: 60px;
+      align-self: stretch;
+      
+    }
+  }
   @include phone{
     .logos{
       display: flex;
       flex-wrap: wrap;
+      justify-content: space-between;
+      gap: 60px;
+      align-self: stretch;
       
     }
   }
 }
-
 
 /* Skill Section */
 .skill-section {
@@ -252,6 +350,9 @@ header {
         .card-image {
           width: 315px;
           height: 315px;
+          @include phone{
+            width:100%;
+          }
         }
   
         .card-content {
@@ -267,6 +368,9 @@ header {
             font-size: 20px; 
             font-weight: 600;
             line-height: 30px;
+            @include phone{
+              width:100%;
+            }
           }
   
           .card-description {
@@ -274,6 +378,9 @@ header {
             font-weight: 400;
             line-height: 27px;
           }
+        }
+        @include phone{
+          width: 100%;
         }
       }
     }
@@ -414,6 +521,7 @@ footer {
         flex-direction: column;
         align-items: flex-start;
         gap: 60px;
+        width:100%;
 
         .footer-message {
           @extend %common-styles;
@@ -423,7 +531,7 @@ footer {
           gap: 40px;
 
           .message-title {
-            width: 360px;
+            width: 100%;
             font-size: 32px;
             font-style: normal;
             font-weight: 600;
@@ -449,6 +557,9 @@ footer {
             flex-shrink: 0;
           }
         }
+        @include laptop{
+
+        }
       }
 
       .contact-form {
@@ -466,10 +577,16 @@ footer {
 
           .input-field {
             display: flex;
-            width: 530px;
+            width: 450px;
             padding: 21px 30px;
             align-items: flex-start;
             gap: 10px;
+            @include phone{
+              width: 100%;
+            }
+          }
+          @include laptop{
+            width:100%;
           }
         }
 
@@ -481,14 +598,156 @@ footer {
           background-color: black;
           color: white;
         }
+        @include laptop{
+          width: 100%;;
+        }
+      }
+    }
+    @include tab{
+      .main-info{
+        display: flex;
+        flex-wrap: wrap;
       }
     }
     @include phone{
       .main-info{
         display: flex;
         flex-wrap: wrap;
+        width:100%;
       }
     }
+    @include laptop{
+      .footer-info{
+        width:100%;
+      }
+      .main-info{
+        gap:1px;
+        width: 100%;
+      }
+    }
+  }
+}
+ /* About Section*/
+.about-persona{
+  @extend %common-styles;
+  display: flex;
+  padding: 120px 320px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  align-self: stretch;
+  background: #F9E6F0;
+.about-container{
+  display: flex;
+  width: 780px;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  .persona{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+    .image-container{
+      width: 195px;
+      height: 195px;
+      .persona-image{
+        width: 100%;
+        height: 100%;
+        flex-shrink: 0;
+      }
+    }
+    .persona-description{
+      width: 195px;
+      height: 82.524px;
+    }
+  }
+  .bio-text{
+    width: 400px;
+    flex-shrink: 0;
+    @include phone{
+      width:250px;
+    }
+
+  }
+  @include laptop{ 
+    width: 100%;
+  }
+  @include tab{
+    width: 100%;
+  }
+  @include phone{ 
+    width: 100%;
+  }
+}
+@include phone{
+  padding: 60px 60px;
+}
+@include tab{
+  padding: 60px 60px;
+}
+}
+// work description
+.work-description{
+  @extend %common-styles;
+  display: flex;
+  padding: 120px 250px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  align-self: stretch;
+  .about-description-container{
+    display: flex;
+    width: 880px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 60px;
+    .about-description-text{
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 60px;
+      align-self: stretch;
+      .main-text{
+        align-self: stretch;
+      }
+      .secondary-text{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        align-self: stretch;
+        .coloured-text, .uncoloured-text {
+          display: flex;
+          padding: 5px 0;
+          align-items: flex-start;
+          gap: 10px;
+          align-self: stretch;
+          font-weight: 300;
+          .layout{
+            flex: 1 0 0;
+          }
+        }
+        
+        .coloured-text {
+          background: #009379;
+          color:#F9E6F0
+        }
+        
+      }
+    }
+
+  }
+  @include phone{
+    padding:60px 60px;
+  }
+  @include tab{
+    padding:60px 60px;
+  }
+  @include laptop{
+    padding:80px 60px;
   }
 }
 
